package com.design.model.factory;

/**
 * Description: 门店接口
 *
 * @author : zhaoyan.ye (zhaoyan.ye@ucarinc.com)
 * @since : 2019-07-05 16:31:01
 **/
public interface Dept {
    void info();
}
