package com.design.model.factory;

/**
 * Description: 车辆接口
 *
 * @author : zhaoyan.ye (zhaoyan.ye@ucarinc.com)
 * @since : 2019-07-05 11:21:14
 **/
public interface Vehicle {
    void doSomething();
}
