package com.design.model.factory.example;

import com.design.model.factory.Dept;

/**
 * Description: 门店接口550
 *
 * @author : zhaoyan.ye (zhaoyan.ye@ucarinc.com)
 * @since : 2019-07-05 16:31:49
 **/
public class Dept550 implements Dept {
    @Override
    public void info() {
        System.out.println("获得门店版本550对应接口数据");
    }
}
