package com.design.model.factory.example;

import com.design.model.factory.Vehicle;

/**
 * Description: 车辆接口550
 *
 * @author : zhaoyan.ye (zhaoyan.ye@ucarinc.com)
 * @since : 2019-07-05 11:25:28
 **/
public class Vehicle550 implements Vehicle {
    @Override
    public void doSomething() {
        System.out.println("执行车辆版本550对应接口逻辑");
    }
}
