package com.design.model.factory.example;

import com.design.model.factory.Vehicle;

/**
 * Description: 车辆接口551
 *
 * @author : zhaoyan.ye (zhaoyan.ye@ucarinc.com)
 * @since : 2019-07-05 11:25:28
 **/
public class Vehicle551 implements Vehicle {
    @Override
    public void doSomething() {
        System.out.println("执行车辆版本551对应接口逻辑");
    }
}
