package com.design.model.factory.example;

import com.design.model.factory.Vehicle;

/**
 * Description: 车辆接口552
 *
 * @author : zhaoyan.ye (zhaoyan.ye@ucarinc.com)
 * @since : 2019-07-05 11:25:28
 **/
public class Vehicle552 implements Vehicle {
    @Override
    public void doSomething() {
        System.out.println("执行车辆版本552对应接口逻辑");
    }
}
